DIAC-446 fix code smells in main (#360)
* DIAC-401 bump chart version

* DIAC-446 Fix code smells in main and test (quick wins)

* DIAC-446 Fix code smells in main and test (quick wins)

* DIAC-446 Update code smells

* DIAC-446 Update code smells