@@ -5,8 +5,9 @@ import static org.junit.Assert.assertNotNull;
 import static org.mockito.BDDMockito.when;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.Date;
+import java.util.List;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -23,7 +24,6 @@ import uk.gov.hmcts.reform.iacasepaymentsapi.infrastructure.clients.PaymentApi;
 import uk.gov.hmcts.reform.iacasepaymentsapi.infrastructure.security.RequestUserAccessTokenProvider;
 
 @ExtendWith(MockitoExtension.class)
-@SuppressWarnings("unchecked")
 class PaymentServiceTest {
 
     @Mock private PaymentApi paymentApi;
@@ -31,12 +31,10 @@ class PaymentServiceTest {
     @Mock private AuthTokenGenerator serviceAuthorizationProvider;
 
     private CreditAccountPayment creditAccountPayment;
-
     private PaymentService paymentService;
 
     @BeforeEach
     public void setUp() {
-
         paymentService = new PaymentService(
             paymentApi,
             userAuthorizationProvider,
@@ -44,21 +42,18 @@ class PaymentServiceTest {
     }
 
     @Test
-    void should_make_a_pba_payment() throws Exception {
-
+    void should_make_a_pba_payment() {
         when(userAuthorizationProvider.getAccessToken()).thenReturn("userAuthorizationToken");
         when(serviceAuthorizationProvider.generate()).thenReturn("serviceAuthorizationToken");
 
         creditAccountPayment = getCreditAccountPaymentRequest();
+        PaymentResponse expectedPaymentResponse = getExpectedPaymentResponse();
         when(paymentApi.creditAccountPaymentRequest(
             userAuthorizationProvider.getAccessToken(),
             serviceAuthorizationProvider.generate(),
             creditAccountPayment
             ))
-            .thenReturn(new PaymentResponse("RC-1590-6748-2373-9129", new Date(),
-            "Success", "2020-1590674823325",
-                Arrays.asList(new StatusHistories("Success", null, null, null, null))));
-
+            .thenReturn(expectedPaymentResponse);
 
         PaymentResponse paymentResponse = paymentService.creditAccountPayment(creditAccountPayment);
 
@@ -68,14 +63,33 @@ class PaymentServiceTest {
         assertEquals("Success", paymentResponse.getStatus());
     }
 
-    private CreditAccountPayment getCreditAccountPaymentRequest() throws Exception {
+    private CreditAccountPayment getCreditAccountPaymentRequest() {
 
-        return new CreditAccountPayment("PBA0066906", new BigDecimal("140.00"),
-            "caseReference", "ccdCaseNumber",
-            Currency.GBP, "customerReference", "Some description",
-                                        "ia-legal-rep-org",
-                                        Service.IAC,
-                                        "BFA1",
-            Arrays.asList(new Fee("FEE0123", "Fee description", "1", new BigDecimal("140.00"))));
+        return new CreditAccountPayment(
+            "PBA0066906",
+            new BigDecimal("140.00"),
+            "caseReference",
+            "ccdCaseNumber",
+            Currency.GBP,
+            "customerReference",
+            "Some description",
+            "ia-legal-rep-org",
+            Service.IAC,
+            "BFA1",
+            List.of(new Fee("FEE0123",
+                            "Fee description",
+                            "1",
+                            new BigDecimal("140.00"))));
+    }
+
+    private PaymentResponse getExpectedPaymentResponse() {
+        return new PaymentResponse("RC-1590-6748-2373-9129", new Date(),
+                                   "Success", "2020-1590674823325",
+                List.of(
+                        new StatusHistories("Success",
+                                null,
+                                null,
+                                null,
+                                null)));
     }
 }
